# web-3d

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  index.js  package.json  shell.nix  snowpack.config.js  style.css  tsconfig.json  yarn.nix
frontend/: index.html  index.ts
src/: .lib.rs.swp  .octree.rs.swp  .shape.rs.swp  lib.rs  octree.rs  quadtree.rs  shape.rs  webgl.rs
src/camera/: matrix.rs  mod.rs
src/geometry/: mod.rs  noise.rs  random.rs  vec_3d.rs
src/octree/: .geometry.rs.swp  geometry.rs
wasm/: Cargo.nix  Cargo.toml
wasm/src/: lib.rs  webgl.rs
wasm/src/camera/: mod.rs
wasm/src/geometry/: mod.rs  noise.rs  octree.rs  vec_3d.rs
