[package]
name = "web-3d"
version = "0.1.0"
authors = ["rambip"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
js-sys = "0.3.35"
wasm-bindgen = "0.2.70"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'WebGlRenderingContext',
  'WebGlUniformLocation',
]

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
